--- a/index.html
+++ b/index.html
@@ -46,16 +46,19 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">P1</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
+                <li class="active dropdown">
+                  <a href="#" class="dropdown-toggle"
+                  data-toggle="dropdown" role="button" aria-haspopup="true"
+                  aria-expanded="false"> P1 <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">P2</a></li>
-                    <li><a href="#">P3</a></li>
-                    <li><a href="#">P4</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#">Programming Experience</a></li>
+                    <li><a href="#">Platform</a></li>
                   </ul>
+                </li>
+                <li><a href="">P2</a></li>
+                <li><a href="">P3</a></li>
+                <li><a href="#">P4</a></li>
                 </li>
               </ul>
             </div>
@@ -125,7 +128,7 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <div class="row" id="about">
         <div class="col-lg-4">
           <img class="img-circle" src="images/profile_pic.JPG" alt="profile_pic" width="140" height="140">
           <h2>Ryan Kucinski</h2>
@@ -181,7 +184,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2015 Ryan Kucinski</p>
       </footer>
 
     </div><!-- /.container -->
