added more content, updated style rules

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                   aria-expanded="false"> P1 <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#">Programming Experience</a></li>
-                    <li><a href="#">Platform</a></li>
+                    <li><a href="#goals">Goals</a></li>
+                    <li><a href="#progexp">Programming Experience</a></li>
+                    <li><a href="#platform">Platform</a></li>
                   </ul>
                 </li>
                 <li><a href="">P2</a></li>
@@ -82,8 +83,8 @@
         <div class="item active">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <h1>WELCOME</h1>
+              <p>Hi, and thanks for visiting my CSCI E-15 project portfolio page. Scroll vertically or use the navigation menu to view the outlined project answers or slide horizontally to learn more about me...</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
             </div>
           </div>
@@ -91,16 +92,18 @@
         <div class="item">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>2011 Graduate Babson College</h1>
+              <p>Bachelor of Science Business Management, Concentrating in Entrepreneurship</p>
+              <h2>2014 Certificates Villanova University</h2>
+              <p>Master Certificate in Business Analysis and Lean Six Sigma Green Belt</p>
+              <p><a class="btn btn-lg btn-primary" href="https://www.linkedin.com/pub/ryan-kucinski/32/718/894" role="button">LinkedIn</a></p>
             </div>
           </div>
         </div>
         <div class="item">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
+              <h1>Hobbies and Activities</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
@@ -139,7 +142,7 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
+      <div class="row featurette" id="goals">
         <div class="col-md-7">
           <h2 class="featurette-heading">Goals <span class="text-muted">Why I am taking this course?</span></h2>
           <p class="lead">I chose to take CSCI E-12, Dynamic Web Applications because of the course focus on PHP and version control. As a Business Analyst on the Business Engineering Team at Acquia, I am surrounded by software engineers primarily coding in PHP. Gaining more exposure to PHP and the best practices around version control will enhance my opportunities and performance at work.</p>
@@ -151,9 +154,9 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
+      <div class="row featurette" id="progexp">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+          <h2 class="featurette-heading">Previous Programming Experience<span class="text-muted">Eduction and Professional</span></h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
@@ -163,9 +166,9 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
+      <div class="row featurette" id="platform">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+          <h2 class="featurette-heading">Platform<span class="text-muted">Etc.</span></h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
