added more content and updated style rules

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="carousel-caption">
               <h1>WELCOME</h1>
               <p>Hi, and thanks for visiting my CSCI E-15 project portfolio page. Scroll vertically or use the navigation menu to view the outlined project answers or slide horizontally to learn more about me...</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="#about" role="button">about me</a></p>
             </div>
           </div>
         </div>
@@ -104,8 +104,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Hobbies and Activities</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <p>I enjoy being outside and staying active. Last fall I ran the Chicago Marathon. I love to ski in the winter and mountain bike in the summer. All of the pictures below are from my instagram.</p>
+              <p><a class="btn btn-lg btn-primary" href="https://instagram.com/ryan_kucinski/" role="button">Instagram</a></p>
             </div>
           </div>
         </div>
@@ -132,8 +132,7 @@
         <div class="col-lg-4">
           <img class="img-circle" src="images/profile_pic.JPG" alt="profile_pic" width="300" height="300">
           <h2>Ryan Kucinski</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>Hi, my name is Ryan Kucinski. I am 26 years old and live in the West End of Boston with my Girlfriend Ally. When I am not practicing web development or taking courses at Harvard  Extension school, I work as a Business Analyst at Acquia on our Business Engineering Team. At my current role, I do a mix of day to day responsibilities such as auditing and troubleshooting our customer data, as well as project work focusing around building an internal data warehouse.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -157,7 +156,7 @@
       <div class="row featurette" id="progexp">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Previous Programming Experience<span class="text-muted">Eduction and Professional</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">I got my start as a business analyst at my previous employer, wrtiting SQL scripts for ETL packages and designing relational databases for our clients. Last semester I enrolled in CSCI E-12 and learned basic web development strategies, HTML, CSS and Javascript / JQuery. I currently work on a software engineering team that focuses on PHP and have completed several online tutorials via codeacemy and similar sites. </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" src="images/bike1.jpg" alt="Generic placeholder image">
@@ -168,8 +167,8 @@
 
       <div class="row featurette" id="platform">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Platform<span class="text-muted">Etc.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Platform<span class="text-muted">HardwareEtc.</span></h2>
+          <p class="lead">I am running Mac OS X Yosemite Version 10.10.5 on my 13" Macbook Pro Retina. For a text editor, I recently converted from Sublime to Atom and if nothing else, I am appreciate the lack of annoying pop-ups asking me to purchase to the full version.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="images/killington1.jpg" alt="Generic placeholder image">
