rounded image corners, minor content changes

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="col-lg-4">
           <img class="img-circle" src="images/profile_pic.JPG" alt="profile_pic" width="300" height="300">
           <h2>Ryan Kucinski</h2>
-          <p>Hi, my name is Ryan Kucinski. I am 26 years old and live in the West End of Boston with my Girlfriend Ally. When I am not practicing web development or taking courses at Harvard  Extension school, I work as a Business Analyst at Acquia on our Business Engineering Team. At my current role, I do a mix of day to day responsibilities such as auditing and troubleshooting our customer data, as well as project work focusing around building an internal data warehouse.</p>
+          <p>Hi, my name is Ryan. I am 26 years old and live in the West End of Boston with my Girlfriend Ally. When I am not practicing web development or taking courses at Harvard  Extension school, I work as a Business Analyst at Acquia on our Business Engineering Team. At my current role, I do a mix of day to day responsibilities such as auditing and troubleshooting our customer data, as well as project work focused around building an internal data warehouse.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -147,7 +147,7 @@
           <p class="lead">I chose to take CSCI E-12, Dynamic Web Applications because of the course focus on PHP and version control. As a Business Analyst on the Business Engineering Team at Acquia, I am surrounded by software engineers primarily coding in PHP. Gaining more exposure to PHP and the best practices around version control will enhance my opportunities and performance at work.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="images/aspen1.jpg" alt="aspen">
+          <img class="featurette-image img-responsive img-rounded center-block" src="images/aspen1.jpg" alt="aspen">
         </div>
       </div>
 
@@ -159,7 +159,7 @@
           <p class="lead">I got my start as a business analyst at my previous employer, wrtiting SQL scripts for ETL packages and designing relational databases for our clients. Last semester I enrolled in CSCI E-12 and learned basic web development strategies, HTML, CSS and Javascript / JQuery. I currently work on a software engineering team that focuses on PHP and have completed several online tutorials via codeacemy and similar sites. </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" src="images/bike1.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive img-rounded center-block" src="images/bike1.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -171,7 +171,7 @@
           <p class="lead">I am running Mac OS X Yosemite Version 10.10.5 on my 13" Macbook Pro Retina. For a text editor, I recently converted from Sublime to Atom and if nothing else, I am appreciate the lack of annoying pop-ups asking me to purchase to the full version.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="images/killington1.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive img-rounded center-block" src="images/killington1.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
