added README.md file, added dropdowns to nav, updated links to github repos and live sites for all projects, added some content in the carousel and fixed a few gramatical errors

--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -49,17 +45,44 @@
                 <li class="active dropdown">
                   <a href="#" class="dropdown-toggle"
                   data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false"> P1 <span class="caret"></span></a>
+                  aria-expanded="false">P1<span class="caret"></span></a>
                   <ul class="dropdown-menu">
+                    <li><a href="https://P1.ryankucinski.com">View Live</a></li>
+                    <li><a href="https://github.com/RyanKuc/P1.git">Github</a></li>
+                    <li role="separator" class="divider"></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#goals">Goals</a></li>
                     <li><a href="#progexp">Programming Experience</a></li>
                     <li><a href="#platform">Platform</a></li>
                   </ul>
                 </li>
-                <li><a href="">P2</a></li>
-                <li><a href="">P3</a></li>
-                <li><a href="#">P4</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle"
+                  data-toggle="dropdown" role="button" aria-haspopup="true"
+                  aria-expanded="false">P2<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="https://P2.ryankucinski.com">View Live</a></li>
+                    <li><a href="https://github.com/RyanKuc/P2.git">Github</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle"
+                  data-toggle="dropdown" role="button" aria-haspopup="true"
+                  aria-expanded="false">P3<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="https://P3.ryankucinski.com">View Live</a></li>
+                    <li><a href="https://github.com/RyanKuc/P3.git">Github</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="https://P4.ryankucinski.com" class="dropdown-toggle"
+                  data-toggle="dropdown" role="button" aria-haspopup="true"
+                  aria-expanded="false">P4<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">View Live</a></li>
+                    <li><a href="https://github.com/RyanKuc/P4.git">Github</a></li>
+                  </ul>
+                </li>
                 </li>
               </ul>
             </div>
@@ -84,7 +107,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>WELCOME</h1>
-              <p>Hi, and thanks for visiting my CSCI E-15 project portfolio page. Scroll vertically or use the navigation menu to view the outlined project answers or slide horizontally to learn more about me...</p>
+              <p>Hi, and thanks for visiting my CSCI E-15 project portfolio page. Here you can learn a little about me and will be able to access all of my Dynamic Web Application projects. Scroll vertically or use the navigation menu to view the outlined project answers or slide horizontally to learn more about me...</p>
               <p><a class="btn btn-lg btn-primary" href="#about" role="button">about me</a></p>
             </div>
           </div>
@@ -92,7 +115,8 @@
         <div class="item">
           <div class="container">
             <div class="carousel-caption">
-              <h1>2011 Graduate Babson College</h1>
+              <h1>Education<h1>
+              <h2>2011 Graduate Babson College</h1>
               <p>Bachelor of Science Business Management, Concentrating in Entrepreneurship</p>
               <h2>2014 Certificates Villanova University</h2>
               <p>Master Certificate in Business Analysis and Lean Six Sigma Green Belt</p>
@@ -132,7 +156,7 @@
         <div class="col-lg-4">
           <img class="img-circle" src="images/profile_pic.JPG" alt="profile_pic" width="300" height="300">
           <h2>Ryan Kucinski</h2>
-          <p>Hi, my name is Ryan. I am 26 years old and live in the West End of Boston with my Girlfriend Ally. When I am not practicing web development or taking courses at Harvard  Extension school, I work as a Business Analyst at Acquia on our Business Engineering Team. At my current role, I do a mix of day to day responsibilities such as auditing and troubleshooting our customer data, as well as project work focused around building an internal data warehouse.</p>
+          <p>Hi, my name is Ryan. I am 26 years old and live in the West End of Boston with my girlfriend Ally. When I am not practicing web development or taking courses at Harvard  Extension school, I work as a Business Analyst at Acquia on our Business Engineering Team. At my current role, I do a mix of day to day responsibilities such as auditing and troubleshooting our customer data, as well as project work focused around building an internal data warehouse.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -143,8 +167,8 @@
 
       <div class="row featurette" id="goals">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Goals <span class="text-muted">Why I am taking this course?</span></h2>
-          <p class="lead">I chose to take CSCI E-12, Dynamic Web Applications because of the course focus on PHP and version control. As a Business Analyst on the Business Engineering Team at Acquia, I am surrounded by software engineers primarily coding in PHP. Gaining more exposure to PHP and the best practices around version control will enhance my opportunities and performance at work.</p>
+          <h2 class="featurette-heading">Goals<span class="text-muted">Why I am taking this course?</span></h2>
+          <p class="lead">I chose to take CSCI E-15, Dynamic Web Applications because of the course focus on PHP and version control. As a Business Analyst on the Business Engineering Team at Acquia, I am surrounded by software engineers primarily coding in PHP. Gaining more exposure to PHP and the best practices around version control will enhance my opportunities and performance at work.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive img-rounded center-block" src="images/aspen1.jpg" alt="aspen">
@@ -155,8 +179,8 @@
 
       <div class="row featurette" id="progexp">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Previous Programming Experience<span class="text-muted">Eduction and Professional</span></h2>
-          <p class="lead">I got my start as a business analyst at my previous employer, wrtiting SQL scripts for ETL packages and designing relational databases for our clients. Last semester I enrolled in CSCI E-12 and learned basic web development strategies, HTML, CSS and Javascript / JQuery. I currently work on a software engineering team that focuses on PHP and have completed several online tutorials via codeacemy and similar sites. </p>
+          <h2 class="featurette-heading">Programming<span class="text-muted">Experience and Eduction</span></h2>
+          <p class="lead">I got my start as a business analyst at my previous employer, wrtiting SQL scripts for ETL packages and designing relational databases for our clients. Last semester I enrolled in CSCI E-15 and learned basic web development strategies, HTML, CSS and Javascript / JQuery. I currently work on a software engineering team that focuses on PHP and have completed several online tutorials via codeacemy and similar sites. </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive img-rounded center-block" src="images/bike1.jpg" alt="Generic placeholder image">
@@ -179,7 +203,6 @@
 
       <!-- /END THE FEATURETTES -->
 
-
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
@@ -194,8 +217,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <!--<script src="../../assets/js/vendor/holder.min.js"></script> -->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <!--  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
   </body>
