--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row" id="about">
         <div class="col-lg-4">
-          <img class="img-circle" id="myprofilepic" src="images/profile_pic.JPG" alt="profile_pic">
+          <img class="img-circle" id="myprofilepic" src="images/profilepic.jpg" alt="profile_pic">
           <h2>Ryan Kucinski</h2>
           <p>Hi, my name is Ryan. I am 26 years old and live in the West End of Boston with my girlfriend Ally. When I am not practicing web development or taking courses at Harvard  Extension school, I work as a Business Analyst at Acquia on our Business Engineering Team. At my current role, I do a mix of day to day responsibilities such as auditing and troubleshooting our customer data, as well as project work focused around building an internal data warehouse.</p>
         </div><!-- /.col-lg-4 -->
