--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Ryan Kucinski Dynamic Web Apps Portfolio</a>
+              <a class="navbar-brand" href="#">Ryan Kucinski's Web App Portfolio</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -47,7 +47,7 @@
                   data-toggle="dropdown" role="button" aria-haspopup="true"
                   aria-expanded="false">P1<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="https://P1.ryankucinski.com">View Live</a></li>
+                    <li><a href="http://P1.ryankucinski.com">View Live</a></li>
                     <li><a href="https://github.com/RyanKuc/P1.git">Github</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#about">About</a></li>
@@ -61,7 +61,7 @@
                   data-toggle="dropdown" role="button" aria-haspopup="true"
                   aria-expanded="false">P2<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="https://P2.ryankucinski.com">View Live</a></li>
+                    <li><a href="http://P2.ryankucinski.com">View Live</a></li>
                     <li><a href="https://github.com/RyanKuc/P2.git">Github</a></li>
                   </ul>
                 </li>
@@ -70,12 +70,12 @@
                   data-toggle="dropdown" role="button" aria-haspopup="true"
                   aria-expanded="false">P3<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="https://P3.ryankucinski.com">View Live</a></li>
+                    <li><a href="http://P3.ryankucinski.com">View Live</a></li>
                     <li><a href="https://github.com/RyanKuc/P3.git">Github</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <a href="https://P4.ryankucinski.com" class="dropdown-toggle"
+                  <a href="http://P4.ryankucinski.com" class="dropdown-toggle"
                   data-toggle="dropdown" role="button" aria-haspopup="true"
                   aria-expanded="false">P4<span class="caret"></span></a>
                   <ul class="dropdown-menu">
@@ -115,10 +115,10 @@
         <div class="item">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Education<h1>
-              <h2>2011 Graduate Babson College</h1>
+              <h2>Education<h2>
+              <h3>2011 Graduate Babson College</h3>
               <p>Bachelor of Science Business Management, Concentrating in Entrepreneurship</p>
-              <h2>2014 Certificates Villanova University</h2>
+              <h3>2014 Certificates Villanova University</h3>
               <p>Master Certificate in Business Analysis and Lean Six Sigma Green Belt</p>
               <p><a class="btn btn-lg btn-primary" href="https://www.linkedin.com/pub/ryan-kucinski/32/718/894" role="button">LinkedIn</a></p>
             </div>
@@ -127,8 +127,8 @@
         <div class="item">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Hobbies and Activities</h1>
-              <p>I enjoy being outside and staying active. Last fall I ran the Chicago Marathon. I love to ski in the winter and mountain bike in the summer. All of the pictures below are from my instagram.</p>
+              <h2>Hobbies and Activities</h2>
+              <p>I enjoy being outside and staying active - skiing in the winter and mountain biking in the summer. Last fall, I ran the Chicago Marathon. When I am not outside, I like to practice cooking new dishes and learning web-development. If you like the pictures below, check out my instagram to see more.</p>
               <p><a class="btn btn-lg btn-primary" href="https://instagram.com/ryan_kucinski/" role="button">Instagram</a></p>
             </div>
           </div>
@@ -152,12 +152,19 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
+
       <div class="row" id="about">
         <div class="col-lg-4">
-          <img class="img-circle" id="myprofilepic" src="images/profilepic.jpg" alt="profile_pic">
+        </div>
+        <div class="col-lg-4">
           <h2>Ryan Kucinski</h2>
-          <p>Hi, my name is Ryan. I am 26 years old and live in the West End of Boston with my girlfriend Ally. When I am not practicing web development or taking courses at Harvard  Extension school, I work as a Business Analyst at Acquia on our Business Engineering Team. At my current role, I do a mix of day to day responsibilities such as auditing and troubleshooting our customer data, as well as project work focused around building an internal data warehouse.</p>
+          <img class="img-circle" id="myprofilepic" src="images/profilepic.jpg" alt="profile_pic">
         </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+        </div>
+        <div class="col-lg-12">
+          <p>Hi, my name is Ryan. I am 26 years old and live in the West End of Boston with my girlfriend Ally. When I am not practicing web development or taking courses at Harvard  Extension school, I work as a Business Analyst at Acquia on our Business Engineering Team. At my current role, I do a mix of day to day responsibilities such as auditing and troubleshooting our customer data, as well as project work focused around building an internal data warehouse.</p>
+        </div>
       </div><!-- /.row -->
 
 
