added metadata author etc

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <meta name="description" content="My Dynamic Web Applications project portfolio">
+    <meta name="author" content="Ryan Kucinski">
+    <link rel="icon" href="/images/IMG_0375.jpg">
 
     <title>Ryan Kucinski Project Portfolio</title>
 
@@ -83,7 +83,6 @@
                     <li><a href="https://github.com/RyanKuc/P4.git">Github</a></li>
                   </ul>
                 </li>
-                </li>
               </ul>
             </div>
           </div>
@@ -115,7 +114,7 @@
         <div class="item">
           <div class="container">
             <div class="carousel-caption">
-              <h2>Education<h2>
+              <h2>Education</h2>
               <h3>2011 Graduate Babson College</h3>
               <p>Bachelor of Science Business Management, Concentrating in Entrepreneurship</p>
               <h3>2014 Certificates Villanova University</h3>
@@ -128,7 +127,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h2>Hobbies and Activities</h2>
-              <p>I enjoy being outside and staying active - skiing in the winter and mountain biking in the summer. Last fall, I ran the Chicago Marathon. When I am not outside, I like to practice cooking new dishes and learning web-development. If you like the pictures below, check out my instagram to see more.</p>
+              <p>I enjoy being outside and staying active - skiing in the winter and mountain biking in the summer. Last fall, I ran the Chicago Marathon. When I am not outside, I like to practice cooking new dishes and learning web development. If you like the pictures below, check out my instagram to see more.</p>
               <p><a class="btn btn-lg btn-primary" href="https://instagram.com/ryan_kucinski/" role="button">Instagram</a></p>
             </div>
           </div>
