updated README.md, removed deprecated images, minor changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ryan Kucinski">
     <link rel="icon" href="/images/IMG_0376.jpg">
 
-    <title>Ryan Kucinski Project Portfolio</title>
+    <title>Ryan Kucinski's Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
