updated link to p4

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   data-toggle="dropdown" role="button" aria-haspopup="true"
                   aria-expanded="false">P4<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">View Live</a></li>
+                    <li><a href="http://P4.ryankucinski.com">View Live</a></li>
                     <li><a href="https://github.com/RyanKuc/P4.git">Github</a></li>
                   </ul>
                 </li>
